--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -3,3 +3,17 @@
 <p>
   Ironhack powered
 </p>
+
+<%= image_tag "thuglife.gif"%>
+<%= image_tag "thuglife.gif"%>
+<%= image_tag "thuglife.gif"%>
+<br />
+<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="245px%">
+  <i><font color=#000000><strong><img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;</strong></font></i>
+</marquee>
+<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="245px%">
+  <i><font color=#000000><strong><img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;</strong></font></i>
+</marquee>
+<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="245px%">
+  <i><font color=#000000><strong><img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;</strong></font></i>
+</marquee>
