--- a/app/views/site/calculate.html.erb
+++ b/app/views/site/calculate.html.erb
@@ -1,1 +1,2 @@
-the result of <%= @num1 %> + <%= @num2 %>  is <%= @result %> <img src="glasses.png" height=20px width=60px/> 
+the result of <%= @num1 %> + <%= @num2 %>  is <%= @result %> <img src="glasses.png" height=20px width=60px/>
+<%= link_to "Home", "/" %>
