--- a/app/views/site/contact.html.erb
+++ b/app/views/site/contact.html.erb
@@ -5,3 +5,4 @@
     <marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="40%">
       <i><font color=#000000><strong>Do you need to contact us?&nbsp;&nbsp;&nbsp;<img src="glasses.png" height=20px width=60px/></strong></font></i>
     </marquee>
+<a href="/"><img src="home.png" height=20px width=20px/></a>
