--- a/app/views/site/calculator.html.erb
+++ b/app/views/site/calculator.html.erb
@@ -4,3 +4,5 @@
   <input type="hidden" name="authenticity_token" value="<%form_authenticity_token%>">
   <button type="submit">Add</button>
 </form>
+
+<a href="/"><img src="home.png" height=20px width=20px/></a>
