--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,6 +1,7 @@
 <h1>Welcome to this tracking tool</h1>
 <a href="/calculator"><img src="calculator.png" height=60px width=40px/></a>
 <a href="/contact"><img src="glasses.png" height=20px width=60px/></a>
+<a href="/project">Projects</a>
 <p>
   Ironhack powered
 </p>
