--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,20 +1,13 @@
 <h1>Welcome to this tracking tool</h1>
+
 <a href="/calculator"><img src="calculator.png" height=60px width=40px/></a>
-<a href="/contact"><img src="glasses.png" height=20px width=60px/></a>
+<a href="/contact">Contact</a>
 <a href="/project">Projects</a>
 <p>
   Ironhack powered
 </p>
 <%= image_tag "thuglife.gif"%>
-<%= image_tag "thuglife.gif"%>
-<%= image_tag "thuglife.gif"%>
 <br />
-<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="245px%">
-  <i><font color=#000000><strong><img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;</strong></font></i>
-</marquee>
-<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="245px%">
-  <i><font color=#000000><strong><img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;</strong></font></i>
-</marquee>
 <marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="245px%">
   <i><font color=#000000><strong><img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;</strong></font></i>
 </marquee>
