--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,4 +16,4 @@
 
 <%= link_to 'Home', '/' %>
 <%= link_to 'Add', '/new' %>
-<%= link_to 'Delete all', '/delete_all' %>
+<%= link_to 'Delete all', '/delete_all', method: :get , data: { confirm: "Are you sure you want to delete all projects?"}  %>
