--- a/app/views/site/calculate.html.erb
+++ b/app/views/site/calculate.html.erb
@@ -1,2 +1,13 @@
-the result of <%= @num1 %> + <%= @num2 %>  is <%= @result %> <img src="glasses.png" height=20px width=60px/>
+<h1>Result</h1>
+
+ <%= @result %>
+
+<hr>
+
+<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="100%">
+  <i><font color=#000000><strong>Do you need to contact us?&nbsp;&nbsp;&nbsp;<img src="glasses.png" height=20px width=60px/></strong></font></i>
+</marquee>
+
+<hr>
+
 <%= link_to "Home", "/" %>
