--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,13 +1,21 @@
-<h1>Welcome to this tracking tool</h1>
+<h1>Time Tracking App</h1>
+
+
+<h3>Ultimate tracking tool</h3>
+
+<ul>
+  <li><a href="/contact">Contact</a></li>
+  <li><a href="/project">Projects</a></li>
+</ul>
+
+<br>
 
 <a href="/calculator"><img src="calculator.png" height=60px width=40px/></a>
-<a href="/contact">Contact</a>
-<a href="/project">Projects</a>
+
 <p>
-  Ironhack powered
+  vader powered
 </p>
-<%= image_tag "thuglife.gif"%>
-<br />
-<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="245px%">
+<hr>
+<marquee behavior="scroll" bgcolor=#DCDCDC loop="-1" width="100%">
   <i><font color=#000000><strong><img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;<img src="glasses.png" height=20px width=60px/>&nbsp;</strong></font></i>
 </marquee>
